<resources>
    <string name="app_name">KitDemoApp</string>
    <string name="post">Post</string>
    <string name="long_lorem_ipsum">asdASDasdadasd asd asd asd asd asd asd asd asd</string>
    <string name="company_default_name">HP</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="siguiente">Siguiente</string>
    <string name="token_editText">Token</string>
    <string name="new_token_tittle">Agregue el Token de la demo</string>

    <string name="token_no_activo">El token no se encuentra activo. Por favor contactarse con la mesa de ayuda.</string>
    <string name="token_expirado">El token se encuentra expirado. Por favor contactarse con la mesa de ayuda.</string>
    <string name="error_conexion">Error de conexión. Verifique la red y configuración</string>
    <string name="error_demo">Error de la Demo</string>
    <string name="error_document">Error de conexión</string>
    <string name="error_document_sub">Verifique la red y vuelva a intentarlo</string>
    <string name="abrir">Abrir</string>
    <string name="informacion_de_cliente">Información de Cliente</string>
    <string name="nombre_raz_social">Nombre ó Razón Social</string>
    <string name="email">Email</string>
    <string name="sexo">Sexo</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="no_especifica">No especifica</string>
    <string name="pais">País</string>
    <string name="fecha">Fecha</string>
    <string name="buscar_cliente">Buscar Cliente</string>
    <string name="escanear">Escanear</string>
    <string name="filiatorios">Filiatorios</string>
    <string name="productos">Productos</string>
    <string name="qr_y_barcode">Qr y Barcode</string>
    <string name="recorte_de_firma">Recorte de Firma</string>
    <string name="ejemplos">Ejemplos</string>
    <string name="title_activity_test_para_borrar">TestParaBorrar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fromCamera">Cámara</string>
    <string name="fromGallery">Galería</string>
    <string name="ingrese_id">Ingrese ID del Cliente</string>
    <string name="ejemplo">Ejemplo</string>
    <string name="un_momento">Un momento por favor</string>
</resources>
