<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SelectImageActivity">


        <ImageView
            android:id="@+id/imagenImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loadFromCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_place_holder" />

        <Button
            android:id="@+id/loadFromCamera"
            style="@style/Widget.AppCompat.Button.Colored.MyButton"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fromCamera"
            app:layout_constraintBottom_toTopOf="@+id/siguienteBtn"
            app:layout_constraintEnd_toStartOf="@+id/loadFromGaleryBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/siguienteBtn"
            style="@style/Widget.AppCompat.Button.Colored.MyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/siguiente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loadFromGaleryBtn"
            style="@style/Widget.AppCompat.Button.Colored.MyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/fromGallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/loadFromCamera"
            app:layout_constraintTop_toTopOf="@+id/loadFromCamera" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>